Prevented menu items overflowing

--- a/styles.css
+++ b/styles.css
@@ -100,13 +100,14 @@ header {
   }
 
   .global-header.mobile-menu-active {
-    height: calc(100vh + 1px);
+    height: 100%;
+    min-height: calc(100vh + 1px);
     background: rgba(11, 11, 13, 0.8);
   }
 
   @supports (height: 100dvh) {
     .global-header.mobile-menu-active {
-      height: calc(100dvh + 1px);
+      min-height: calc(100dvh + 1px);
     }
   }
 }
@@ -546,14 +547,15 @@ header {
 
   .global-header__mobile-menu.active {
     opacity: 1;
-    height: calc(100vh - var(--global-header-height) + 1px);
+    height: 100%;
+    min-height: calc(100vh - var(--global-header-height) + 1px);
     visibility: visible;
     pointer-events: auto;
   }
 
   @supports (height: 100dvh) {
     .global-header__mobile-menu.active {
-      height: calc(100dvh - var(--global-header-height) + 1px);
+      min-height: calc(100dvh - var(--global-header-height) + 1px);
     }
   }
 }
@@ -583,14 +585,18 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - var(--global-header-height) + 1px);
+  gap: 40px;
+  height: 100%;
+  min-height: calc(100vh - var(--global-header-height) + 1px);
+  max-height: calc(100vh - var(--global-header-height) + 1px);
   color: var(--core-heat-white);
   padding: 20px 12px 48px;
 }
 
 @supports (height: 100dvh) {
   .global-header__mobile-menu__wrapper {
-    height: calc(100dvh - var(--global-header-height) + 1px);
+    min-height: calc(100dvh - var(--global-header-height) + 1px);
+    max-height: calc(100dvh - var(--global-header-height) + 1px);
   }
 }
 
@@ -601,9 +607,15 @@ header {
   font: var(--mobile-gt-super-h4);
   text-transform: uppercase;
   height: 100%;
+  max-height: 100%;
+  overflow: auto;
   opacity: 1;
   visibility: visible;
   transition: opacity 250ms ease, visibility 250ms ease;
+}
+
+[data-initial-menu] {
+  max-height: calc(100% - 128px - 48px);
 }
 
 [data-initial-menu].global-header__mobile-menu__item-wrapper.hidden {
@@ -618,7 +630,9 @@ header {
   left: 0;
   width: 100%;
   /* 128px - Height of footer, 48px - Height of bottom padding */
-  height: calc(100% - 128px - 48px);
+  height: 100%;
+  max-height: calc(100% - 128px - 48px);
+  overflow: auto;
   left: 50%;
   opacity: 0;
   visibility: hidden;
